--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "Alexander Johnson",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
