--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Final Project For Masters",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon --delay 1000ms index.js",
     "start": "node index.js"
   },
   "author": "Alexander Johnson",
